<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtInitialInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/screen_narrator"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

            <RadioGroup
                android:id="@+id/rbInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbDesactivateInst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="changeInitialInstructions"
                    android:text="@string/desactivate" />

                <RadioButton
                    android:id="@+id/rbActivateInst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="changeInitialInstructions"
                    android:text="@string/activate" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtOutputType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/output_type"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Subtitle" />

            <RadioGroup
                android:id="@+id/rbOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbNarrator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="changeOutputType"
                    android:text="@string/narrator" />

                <RadioButton
                    android:id="@+id/rbMusic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="changeOutputType"
                    android:text="@string/musical" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/transparent"
        android:onClick="backCamera"
        app:srcCompat="@drawable/backtrack_black" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/backButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="238dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/transparent"
        android:onClick="nextOption"
        app:srcCompat="@drawable/next" />

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/backButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="233dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/transparent"
        android:onClick="previousOption"
        app:srcCompat="@drawable/previous" />

    <ImageButton
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/backButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="7dp"
        android:backgroundTint="@color/transparent"
        android:onClick="selectOption"
        app:srcCompat="@drawable/done" />

</RelativeLayout>
